--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.3",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
